--- a/ModularWeb.Authentication/Areas/Authentication/Views/Default/Index.Template.cshtml
+++ b/ModularWeb.Authentication/Areas/Authentication/Views/Default/Index.Template.cshtml
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>ModularWeb.Security >> Index</title>
+    <title>ModularWeb.Authentication >> Index</title>
 </head>
 <body>
 <div id="root"></div>
